--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,14 @@
 Source: secure-storage
 Priority: extra
 Maintainer: Kidong Kim <kd0228.kim@samsung.com>
-Build-Depends: debhelper (>= 5), autotools-dev, libssl-dev, openssl, libsecurity-server-client-dev, dlog-dev
+Build-Depends: debhelper (>= 5), autotools-dev, libssl-dev, openssl, dlog-dev
 Standards-Version: 3.7.2
 Section: base
 
 Package: libss-client-dev
 Section: libs
 Architecture: any
-Depends: ${misc:Depends}, libssl-dev, libss-client-0 (= ${Source-Version}), libsecurity-server-client-dev, dlog-dev
+Depends: ${misc:Depends}, libssl-dev, libss-client-0 (= ${Source-Version}), dlog-dev
 Description: secure storage client library develpoment package
 
 Package: libss-client-0
@@ -20,7 +20,7 @@ Description: secure storage client library package
 Package: ss-server
 Section: base
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libss-client-0 (= ${Source-Version}), libsecurity-server-client-0, libdlog-0
+Depends: ${shlibs:Depends}, ${misc:Depends}, libss-client-0 (= ${Source-Version}), libdlog-0
 Description: secure storage server
 
 Package: ss-server-dbg
