--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,79 +1,39 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 PROJECT(secure-storage C)
 
-SET(PREFIX ${CMAKE_INSTALL_PREFIX})
-SET(EXEC_PREFIX "\${prefix}")
-SET(LIBDIR "\${prefix}/lib")
-SET(INCLUDEDIR "\${prefix}/include")
+INCLUDE(FindPkgConfig)
+
 SET(VERSION_MAJOR 1)
 SET(VERSION ${VERSION_MAJOR}.0.0)
 
-INCLUDE_DIRECTORIES(
-	${CMAKE_SOURCE_DIR}/include
-	/usr/include
-	)
+IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
+ADD_DEFINITIONS("-DTIZEN_DEBUG_ENABLE")
+ADD_DEFINITIONS("-DBUILD_TYPE_DEBUG")
+#ADD_DEFINITIONS("-DPRINT_DEBUG_DATA") # for printing raw datas
+ENDIF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
 
-INCLUDE(FindPkgConfig)
-pkg_check_modules(pkgs REQUIRED openssl dlog vconf dukgenerator capi-base-common)
+#ADD_DEFINITIONS("-DUSE_KEY_FILE")      # for private key - use key file
+#ADD_DEFINITIONS("-DSMACK_GROUP_ID")    # for group id sharing with smack label
 
-FOREACH(flag ${pkgs_CFLAGS})
-	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
-ENDFOREACH(flag)
+#ADD_DEFINITIONS("-Werror")
+#ADD_DEFINITIONS("-Wall")
+#ADD_DEFINITIONS("-Wextra")
 
-SET(ss_dir "./")
-SET(ss_include_dir "./include")
-SET(ss_client_dir "./client/non-tz/src")
-SET(ss_client_include_dir "./client/non-tz/include")
-SET(ss_server_dir "./server/non-tz/src")
-SET(ss_server_include_dir "./server/non-tz/include")
-
-SET(ss_prng_dir "./prng/src")
-SET(ss_prng_include_dir "./prng/include")
-SET(ss_test_dir "./testcases")
-
-## About debug
-SET(debug_type "-DSS_DLOG_USE") 		# for debug - use dlog 
-SET(use_key "-DUSE_KEY_FILE")		# for private key - use key file
-SET(smack_groupid "-DSMACK_GROUP_ID") # for group id sharing with smack label
-
-SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden")
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
-
-###################################################################################################
-## for libss-client.so (library)
-SET(libss-client_SOURCES ${ss_client_dir}/ss_client_intf.c ${ss_client_dir}/ss_client_ipc.c ${ss_client_dir}/ss_manager.c)
-SET(libss-client_LDFLAGS " -module -avoid-version ${OPENSSL_LIBS}")
-SET(libss-client_CFLAGS  " ${CFLAGS} -fPIC -I${ss_client_include_dir} -I${ss_include_dir} ${OPENSSL_CFLAGS} ${debug_type}")
-#SET(libss-client_LIBADD " ${OPENSSL_LIBS} ")
-
-ADD_LIBRARY(ss-client SHARED ${libss-client_SOURCES})
-TARGET_LINK_LIBRARIES(ss-client ${pkgs_LDFLAGS})
-SET_TARGET_PROPERTIES(ss-client PROPERTIES SOVERSION ${VERSION_MAJOR})
-SET_TARGET_PROPERTIES(ss-client PROPERTIES VERSION ${VERSION})
-SET_TARGET_PROPERTIES(ss-client PROPERTIES COMPILE_FLAGS "${libss-client_CFLAGS}")
-###################################################################################################
-
-###################################################################################################
-## for ss-server (binary)
-SET(ss-server_SOURCES ${ss_server_dir}/ss_server_ipc.c ${ss_server_dir}/ss_server_main.c ${ss_prng_dir}/ss_prng.c)
-SET(ss-server_CFLAGS " -I. -I${ss_include_dir} -I${ss_server_include_dir} -I${ss_prng_include_dir} ${debug_type} ${use_key} ${OPENSSL_CFLAGS} ${smack_groupid} -D_GNU_SOURCE -D_TRUST_ZONE_ -fPIE")
-SET(ss-server_LDFLAGS ${pkgs_LDFLAGS})
-
-#ADD PKG_CHECK_MODULES
-PKG_CHECK_MODULES(server_pkg REQUIRED libsystemd-daemon cryptsvc)
-
-ADD_EXECUTABLE(ss-server ${ss-server_SOURCES})
-TARGET_LINK_LIBRARIES(ss-server ${pkgs_LDFLAGS} ${server_pkg_LIBRARIES} -lsecurity-server-client -ldl -pie)
-
-SET_TARGET_PROPERTIES(ss-server PROPERTIES COMPILE_FLAGS "${ss-server_CFLAGS}")
-####################################################################################################
+SET(TARGET_SS_SERVER ss-server)
+SET(TARGET_SS_CLIENT ss-client)
+SET(TARGET_SS_CLIENT_TEST ss-client-tests-ss-manager)
 
 CONFIGURE_FILE(secure-storage.pc.in secure-storage.pc @ONLY)
-CONFIGURE_FILE(config.in config @ONLY)
 
-INSTALL(TARGETS ss-client DESTINATION lib)
-INSTALL(PROGRAMS ${CMAKE_BINARY_DIR}/ss-server DESTINATION bin)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/secure-storage.pc DESTINATION lib/pkgconfig)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/res/salt DESTINATION ../opt/share/secure-storage/salt/)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/config DESTINATION share/secure-storage/)
-INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/ss_manager.h DESTINATION include)
+# install interfaces
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/secure-storage.pc DESTINATION lib/pkgconfig)
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/ss_manager.h DESTINATION include)
+
+ADD_SUBDIRECTORY(src/client)
+ADD_SUBDIRECTORY(src/server)
+ADD_SUBDIRECTORY(res)
+ADD_SUBDIRECTORY(systemd)
+
+IF (DEFINED SECURE_STORAGE_BUILD_TEST)
+ADD_SUBDIRECTORY(testcases)
+ENDIF (DEFINED SECURE_STORAGE_BUILD_TEST)
